Fixed flexbox for mobile edition and added to js file so flash would disappear and hand would go away after animation so on back on mobile site appears normal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ a {
 }
 .images {
    display: flex;
-   flex-wrap: wrap-reverse;
+   /* flex-wrap: wrap-reverse; */
    justify-content: center;
    position: relative;
    padding: 2em;
